--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "NODE_ENV=local node src/server.ts",
-    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
+    "watch": "NODE_ENV=local tsc-watch --onSuccess 'node ./dist/server.js'",
     "test": "npx tsc && db-migrate db:create StorefrontDbTests || true && NODE_ENV=test jasmine",
     "tsc": "tsc",
     "lint": "eslint 'src/**/*.ts'",
