Fix some folder names. Return 404 on show endpoint

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npx tsc",
     "start": "NODE_ENV=local node src/server.ts",
     "watch": "NODE_ENV=local tsc-watch --onSuccess 'node ./dist/server.js'",
-    "test": "npx tsc && db-migrate db:create StorefrontDbTests || true && NODE_ENV=test jasmine",
+    "test": "npx tsc && (db-migrate db:create StorefrontDbTests || true) && NODE_ENV=test jasmine",
     "tsc": "tsc",
     "lint": "eslint 'src/**/*.ts'",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write"
