--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,5 @@ POSTGRES_HOST=localhost
 POSTGRES_DB=StorefrontDbTests
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+BCRYPT_SALT_ROUNDS=10
+BCRYPT_PEPER=storefront-pass-peper
