Include token generation endpoint

--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 BCRYPT_SALT_ROUNDS=10
 BCRYPT_PEPER=storefront-pass-peper
+TOKEN_SECRET=042d506d-ebfe-44ac-9c69-d7d55192bd1c
