--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "yup": "^0.32.11"
   },
@@ -28,6 +29,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^4.3.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.4",
     "@types/pg": "^7.14.7",
     "@types/supertest": "^2.0.12",
